css/blog.css
@import url('sentient.css');

html {
  display: flex;
}

body {
  margin: 0;
}

main {
  position: absolute;
  top: 40px;
  left: 50%;
  transform: translateX(-50%);
  width: 70vw;
  max-width: 612px;
  margin-left: 55px;
  margin-right: 5px;
  font-family: 'Sentient-Light', Helvetica;
  color: #1d2951;
  justify-content: center;
} 

.top-bar {
  width: 100vw;
  position: fixed;
  z-index: 1;
  background: linear-gradient(to bottom,
  rgba(255, 255, 255, 1) 0%,
  rgba(255, 255, 255, 0.0) 100%
  );
}

button {
  font-family: 'Sentient-Regular';
  font-size: 32px;
  background-color: rgba(255, 255, 255, 0.0);
  cursor: pointer;
  border: none;
  color: #1c2841;
  text-decoration: none;
}

button::after {
  content: '.';
}

button:hover::after {
  content: ':';
}

.logo {
  padding: 2vh 2vw;
}

#title {
  font-size: 48px;
}

h1 {
  font-family: 'Sentient-Light', Helvetica;
  color: #446ccf;
  letter-spacing: 1px;
}

h3 {
  margin-bottom: -10px;
  color: #446ccf;
  font-size: 28px;
}

#date-and-title {
  font-family: 'Sentient-ExtraLight';
  color: #1c2841;
  margin-top: -15px;
  letter-spacing: 1px;
}

p {
  position: relative;
  text-align: justify;
  justify-content: center;
  line-height: 1.5em;
}

aside {
  position: relative;
  margin: 0px 14px;
  max-width: 584px;
  justify-content: center;
  line-height: 1.5em;
  font-family: 'Sentient-ExtraLight';
  font-size: 0.85em;
}

a {
  color: inherit;
  text-decoration: none;
}

#regular-link {
  color: #446ccf;
}

img {
  position: relative;
  top: 50%;
  left: 50%;
  transform: translate(-50%, 0%);
  max-width: 556px;
  padding: 14px 28px;
}

.code-segment {
  margin: 28px;
  font-size: 16px;
}

